[tool.poetry]
name = "llm-sandbox"
version = "0.1.0"
description = ""
authors = ["komot <komotaymkty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.13.3"
langchain = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
